update Service config added CorsConfiguration to the SecurityFilterChain